; ModuleID = '/home/carl/AnghaBench/tmux/extr_key-string.c_key_string_search_table.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_key-string.c_key_string_search_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@key_string_table = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"User%u\00", align 1
@KEYC_NUSER = common dso_local global i64 0, align 8
@KEYC_USER = common dso_local global i64 0, align 8
@KEYC_UNKNOWN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @key_string_search_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @key_string_search_table(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %27, %1
  %7 = load i64, i64* %4, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** @key_string_table, align 8
  %9 = call i64 @nitems(%struct.TYPE_3__* %8)
  %10 = icmp ult i64 %7, %9
  br i1 %10, label %11, label %30

11:                                               ; preds = %6
  %12 = load i8*, i8** %3, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** @key_string_table, align 8
  %14 = load i64, i64* %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i64 @strcasecmp(i8* %12, i32 %17)
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %26

20:                                               ; preds = %11
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** @key_string_table, align 8
  %22 = load i64, i64* %4, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  store i64 %25, i64* %2, align 8
  br label %44

26:                                               ; preds = %11
  br label %27

27:                                               ; preds = %26
  %28 = load i64, i64* %4, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %4, align 8
  br label %6

30:                                               ; preds = %6
  %31 = load i8*, i8** %3, align 8
  %32 = call i32 @sscanf(i8* %31, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i64* %5)
  %33 = icmp eq i32 %32, 1
  br i1 %33, label %34, label %42

34:                                               ; preds = %30
  %35 = load i64, i64* %5, align 8
  %36 = load i64, i64* @KEYC_NUSER, align 8
  %37 = icmp ult i64 %35, %36
  br i1 %37, label %38, label %42

38:                                               ; preds = %34
  %39 = load i64, i64* @KEYC_USER, align 8
  %40 = load i64, i64* %5, align 8
  %41 = add i64 %39, %40
  store i64 %41, i64* %2, align 8
  br label %44

42:                                               ; preds = %34, %30
  %43 = load i64, i64* @KEYC_UNKNOWN, align 8
  store i64 %43, i64* %2, align 8
  br label %44

44:                                               ; preds = %42, %38, %20
  %45 = load i64, i64* %2, align 8
  ret i64 %45
}

declare dso_local i64 @nitems(%struct.TYPE_3__*) #1

declare dso_local i64 @strcasecmp(i8*, i32) #1

declare dso_local i32 @sscanf(i8*, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
